# embedded-layout

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml  rust_stable.yml
examples/: centered_text.rs  custom_view.rs  dynamic_layout.rs  element_spacing.rs  linear_layout.rs  linear_layout_custom_view_group.rs  nested_layout.rs  nested_layout_macro.rs
macros/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
macros/src/: lib.rs
src/: align.rs  lib.rs  object_chain.rs  rect_helper.rs  view.rs
src/align/: mod.rs
src/align/horizontal/: mod.rs
src/align/vertical/: mod.rs
src/horizontal/: mod.rs
src/layout/: linear.rs  linear_layout.rs  mod.rs
src/layout/linear/: layout_direction.rs  layout_element.rs  layout_operation.rs  mod.rs  orientation.rs  secondary_alignment.rs  spacing.rs
src/utils/: cached.rs  display_area.rs  mod.rs  object_chain.rs  rect_helper.rs
src/vertical/: mod.rs
src/view_group/: mod.rs  object_chain.rs  views.rs
