[package]
name = "embedded-layout"
version = "0.3.3"
license = "MIT"
description = "Extend embedded-graphics with simple layout functions"
repository = "https://github.com/bugadani/embedded-layout"
authors = ["Dániel Buga <bugadani@gmail.com>"]
keywords = ["embedded-graphics", "layout", "linear-layout"]
categories = ["no-std", "embedded", "graphics"]
edition = "2021"
rust-version = "1.61"

exclude = [
    ".gitignore",
    ".github/",
]

[workspace]
members = [
  "macros",
]

[dependencies]
embedded-graphics = "0.8.0"
embedded-layout-macros = { version = "0.2.0", path = "macros" }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
