[package]
name = "embedded-layout-macros"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/bugadani/embedded-layout"
authors = ["Dániel Buga <bugadani@gmail.com>"]
keywords = ["embedded-graphics", "layout", "linear-layout"]
categories = ["no-std", "embedded", "graphics"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
