[package]
name = "embedded-layout-macros"
version = "0.2.0"
license = "MIT"
description = "Procedural macros for embedded-layout"
repository = "https://github.com/bugadani/embedded-layout"
authors = ["Dániel Buga <bugadani@gmail.com>"]
keywords = ["embedded-graphics", "layout", "linear-layout"]
categories = ["no-std", "embedded", "graphics"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
